src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__anti_knight_9x9__check_anti_knight_9x9_1_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/anti_knight_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: HiddenSingle
  cells:
    - row: 4
      col: 5
    - row: 3
      col: 2
    - row: 5
      col: 6
  values:
    - 4
  areas:
    - Row: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 4
    - row: 2
      col: 3
    - row: 6
      col: 5
  values:
    - 2
  areas:
    - Column: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 5
    - row: 0
      col: 0
    - row: 3
      col: 4
  values:
    - 6
  areas:
    - Region: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 4
    - row: 0
      col: 7
    - row: 4
      col: 3
  values:
    - 8
  areas:
    - Region: 1
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 4
  values:
    - 1
  areas:
    - Row: 8
    - Column: 4
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  candidates:
    - - []
      - - 2
        - 3
        - 4
        - 5
        - 7
      - - 3
        - 5
      - - 4
        - 7
      - - 4
        - 5
        - 7
      - - 1
        - 5
        - 7
      - - 1
        - 2
        - 3
        - 5
        - 7
      - []
      - []
    - - - 2
        - 4
        - 5
        - 9
      - - 3
        - 5
        - 7
        - 9
      - - 2
        - 9
      - - 1
        - 7
        - 9
      - []
      - - 1
        - 5
        - 7
        - 9
      - - 1
        - 2
        - 5
        - 6
        - 7
      - - 2
        - 3
        - 5
        - 7
      - - 1
        - 3
        - 4
        - 6
        - 7
    - - - 5
        - 8
        - 9
      - - 4
        - 8
        - 9
      - []
      - []
      - []
      - []
      - - 5
        - 7
      - - 5
        - 7
      - - 4
        - 7
    - - - 2
        - 8
        - 9
      - - 1
        - 3
        - 9
      - []
      - []
      - []
      - - 1
        - 3
        - 7
      - - 1
        - 2
        - 7
        - 8
      - - 2
        - 3
        - 7
        - 9
      - - 1
        - 3
        - 7
        - 8
    - - - 1
        - 2
        - 5
      - - 2
        - 3
        - 6
      - []
      - []
      - []
      - []
      - - 1
        - 3
        - 5
      - - 2
        - 3
        - 5
        - 6
      - - 1
        - 3
        - 6
    - - - 1
        - 5
        - 8
        - 9
      - - 1
        - 5
        - 6
        - 9
      - - 3
        - 6
        - 8
      - - 1
        - 3
        - 7
      - []
      - - 1
        - 3
        - 7
      - []
      - - 3
        - 5
        - 6
        - 7
        - 9
      - - 3
        - 6
        - 7
        - 8
    - - - 1
        - 4
        - 5
        - 8
        - 9
      - - 1
        - 4
        - 5
        - 6
        - 8
        - 9
      - - 5
        - 6
        - 9
      - - 3
        - 4
        - 6
      - - 5
        - 7
      - []
      - - 3
        - 6
        - 7
        - 8
        - 9
      - - 3
        - 6
        - 7
        - 9
      - - 3
        - 6
        - 7
        - 8
    - - []
      - - 4
        - 5
        - 6
        - 8
        - 9
      - - 5
        - 6
        - 8
        - 9
      - - 4
        - 6
        - 7
        - 9
      - - 4
        - 5
        - 7
      - - 5
        - 7
        - 8
        - 9
      - - 6
        - 7
        - 8
        - 9
      - []
      - []
    - - []
      - - 2
        - 6
        - 8
        - 9
      - - 2
        - 6
        - 8
        - 9
      - - 3
        - 6
        - 9
      - []
      - - 3
        - 8
        - 9
      - - 3
        - 6
        - 8
        - 9
      - []
      - []
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 2
      col: 0
    - row: 2
      col: 1
  values:
    - 9
  areas:
    - Row: 2
    - Region: 0
  affectedCells:
    - row: 1
      col: 0
    - row: 1
      col: 1
    - row: 1
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 2
  areas: []
  affectedCells:
    - row: 1
      col: 0
    - row: 1
      col: 6
    - row: 1
      col: 7
    - row: 8
      col: 2
    - row: 0
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 6
  values:
    - 2
  areas:
    - Row: 0
  affectedCells:
    - row: 3
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 1
  values:
    - 2
  areas:
    - Row: 8
  affectedCells:
    - row: 4
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 5
  values:
    - 1
  areas:
    - Row: 0
  affectedCells:
    - row: 1
      col: 5
    - row: 3
      col: 5
    - row: 5
      col: 5
    - row: 1
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 3
  values:
    - 1
  areas:
    - Column: 3
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 1
    - row: 6
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 0
  values:
    - 1
  areas:
    - Row: 6
  affectedCells:
    - row: 4
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 1
  values:
    - 1
  areas:
    - Column: 1
  affectedCells:
    - row: 3
      col: 6
    - row: 3
      col: 8
    - row: 4
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 0
  values:
    - 4
  areas:
    - Column: 0
  affectedCells:
    - row: 1
      col: 8
    - row: 0
      col: 1
    - row: 2
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 8
  values:
    - 4
  areas:
    - Row: 2
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 0
      col: 1
    - row: 0
      col: 2
  values:
    - 3
  areas:
    - Row: 0
    - Region: 0
  affectedCells:
    - row: 1
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 2
      col: 6
    - row: 2
      col: 7
  values:
    - 7
  areas:
    - Row: 2
    - Region: 2
  affectedCells:
    - row: 1
      col: 6
    - row: 1
      col: 7
    - row: 1
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 6
      col: 3
    - row: 8
      col: 3
  values:
    - 3
  areas:
    - Column: 3
    - Region: 7
  affectedCells:
    - row: 8
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 3
      col: 5
    - row: 5
      col: 5
  values:
    - 7
  areas:
    - Region: 4
    - Column: 5
  affectedCells:
    - row: 1
      col: 5
    - row: 7
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 3
      col: 7
    - row: 5
      col: 7
  values:
    - 9
  areas:
    - Region: 5
    - Column: 7
  affectedCells:
    - row: 6
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedPairs
  cells:
    - row: 2
      col: 6
    - row: 2
      col: 7
  values:
    - 5
    - 7
  areas:
    - Row: 2
  affectedCells:
    - row: 2
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 2
      col: 6
    - row: 2
      col: 7
  values:
    - 5
  areas:
    - Row: 2
    - Region: 2
  affectedCells:
    - row: 1
      col: 6
    - row: 1
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 7
  values:
    - 3
  areas: []
  affectedCells:
    - row: 1
      col: 8
    - row: 3
      col: 7
    - row: 4
      col: 7
    - row: 5
      col: 7
    - row: 6
      col: 7
    - row: 3
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 5
  values:
    - 3
  areas:
    - Row: 3
  affectedCells:
    - row: 5
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 7
  areas: []
  affectedCells:
    - row: 5
      col: 7
    - row: 5
      col: 8
    - row: 6
      col: 7
    - row: 7
      col: 6
    - row: 7
      col: 4
    - row: 3
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 6
  values:
    - 8
  areas: []
  affectedCells:
    - row: 3
      col: 0
    - row: 3
      col: 8
    - row: 6
      col: 6
    - row: 7
      col: 6
    - row: 8
      col: 6
    - row: 5
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 7
  values:
    - 6
  areas: []
  affectedCells:
    - row: 6
      col: 1
    - row: 6
      col: 2
    - row: 6
      col: 3
    - row: 6
      col: 6
    - row: 6
      col: 8
    - row: 4
      col: 7
    - row: 5
      col: 7
    - row: 7
      col: 6
    - row: 8
      col: 6
    - row: 4
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 8
  values:
    - 7
  areas: []
  affectedCells:
    - row: 3
      col: 7
    - row: 6
      col: 8
    - row: 2
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 6
  values:
    - 9
  areas: []
  affectedCells:
    - row: 7
      col: 1
    - row: 7
      col: 2
    - row: 7
      col: 3
    - row: 7
      col: 5
    - row: 6
      col: 6
    - row: 8
      col: 6
    - row: 5
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 6
  values:
    - 5
  areas: []
  affectedCells:
    - row: 2
      col: 7
    - row: 4
      col: 6
    - row: 4
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 7
  values:
    - 5
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 1
    - row: 2
      col: 7
    - row: 4
      col: 7
    - row: 4
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 6
  values:
    - 3
  areas: []
  affectedCells:
    - row: 8
      col: 3
    - row: 4
      col: 6
    - row: 6
      col: 6
    - row: 6
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 7
  values:
    - 7
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 6
  values:
    - 1
  areas: []
  affectedCells:
    - row: 4
      col: 8
    - row: 1
      col: 6
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 7
  values:
    - 2
  areas: []
  affectedCells:
    - row: 4
      col: 0
    - row: 3
      col: 7
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 6
  values:
    - 7
  areas: []
  affectedCells:
    - row: 6
      col: 4
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 8
  values:
    - 8
  areas: []
  affectedCells:
    - row: 6
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 6
  values:
    - 6
  areas: []
  affectedCells:
    - row: 1
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 7
  values:
    - 9
  areas: []
  affectedCells:
    - row: 3
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 5
  areas: []
  affectedCells:
    - row: 6
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 8
  values:
    - 3
  areas: []
  affectedCells:
    - row: 4
      col: 1
    - row: 5
      col: 8
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 4
  values:
    - 5
  areas: []
  affectedCells:
    - row: 6
      col: 1
    - row: 6
      col: 2
    - row: 0
      col: 4
    - row: 7
      col: 4
    - row: 7
      col: 5
    - row: 7
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 8
  values:
    - 1
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 0
  values:
    - 2
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 6
  areas: []
  affectedCells:
    - row: 5
      col: 1
    - row: 7
      col: 1
    - row: 5
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 8
  values:
    - 6
  areas: []
  affectedCells:
    - row: 5
      col: 1
    - row: 5
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 9
  areas: []
  affectedCells:
    - row: 6
      col: 1
    - row: 8
      col: 2
    - row: 5
      col: 0
    - row: 8
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 4
  values:
    - 4
  areas: []
  affectedCells:
    - row: 7
      col: 1
    - row: 7
      col: 3
    - row: 0
      col: 4
    - row: 6
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 5
  values:
    - 8
  areas: []
  affectedCells:
    - row: 7
      col: 1
    - row: 7
      col: 2
    - row: 8
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 7
  areas: []
  affectedCells:
    - row: 0
      col: 1
    - row: 0
      col: 3
    - row: 1
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 8
  areas: []
  affectedCells:
    - row: 5
      col: 2
    - row: 2
      col: 0
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 9
  areas: []
  affectedCells:
    - row: 2
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 1
  values:
    - 4
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 3
  values:
    - 3
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 1
  values:
    - 5
  areas: []
  affectedCells:
    - row: 0
      col: 1
    - row: 1
      col: 1
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 2
  values:
    - 6
  areas: []
  affectedCells:
    - row: 7
      col: 3
    - row: 8
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 3
  values:
    - 6
  areas: []
  affectedCells:
    - row: 8
      col: 2
    - row: 7
      col: 3
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 5
  values:
    - 9
  areas: []
  affectedCells:
    - row: 1
      col: 5
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 1
  values:
    - 3
  areas: []
  affectedCells:
    - row: 0
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 4
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 7
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 9
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 0
  values:
    - 9
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 8
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 3
  areas: []
  affectedCells:
    - row: 0
      col: 2
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 7
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 2
  values:
    - 8
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 5
  areas: []
  affectedCells: []
  candidates: ~
  invalidStateReason: ~
