src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__anti_knight_9x9__check_anti_knight_9x9_2_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/anti_knight_9x9.rs
expression: result.steps
snapshot_kind: text
---
- rule: HiddenSingle
  cells:
    - row: 1
      col: 4
    - row: 7
      col: 0
    - row: 2
      col: 1
    - row: 3
      col: 6
  values:
    - 2
  areas:
    - Row: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 5
    - row: 6
      col: 0
    - row: 0
      col: 2
    - row: 1
      col: 6
  values:
    - 3
  areas:
    - Row: 2
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 3
    - row: 7
      col: 2
    - row: 8
      col: 6
  values:
    - 8
  areas:
    - Row: 6
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 4
    - row: 6
      col: 1
    - row: 8
      col: 7
  values:
    - 5
  areas:
    - Row: 7
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 4
    - row: 1
      col: 3
    - row: 7
      col: 5
  values:
    - 9
  areas:
    - Column: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 8
    - row: 3
      col: 6
    - row: 6
      col: 7
  values:
    - 2
  areas:
    - Column: 8
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 6
    - row: 0
      col: 0
    - row: 3
      col: 7
  values:
    - 1
  areas:
    - Region: 2
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 5
    - row: 0
      col: 0
    - row: 3
      col: 7
    - row: 2
      col: 6
  values:
    - 1
  areas:
    - Row: 1
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 7
    - row: 0
      col: 1
    - row: 2
      col: 3
    - row: 1
      col: 8
  values:
    - 4
  areas:
    - Row: 7
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 4
    - row: 2
      col: 5
    - row: 5
      col: 1
  values:
    - 3
  areas:
    - Region: 4
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 6
    - row: 0
      col: 1
    - row: 1
      col: 8
    - row: 7
      col: 7
  values:
    - 4
  areas:
    - Column: 6
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 7
    - row: 0
      col: 2
    - row: 1
      col: 6
    - row: 5
      col: 1
  values:
    - 3
  areas:
    - Column: 7
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 5
    - row: 0
      col: 1
    - row: 2
      col: 3
    - row: 4
      col: 6
    - row: 7
      col: 7
  values:
    - 4
  areas:
    - Column: 5
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 6
    - row: 2
      col: 8
    - row: 6
      col: 1
    - row: 8
      col: 7
    - row: 7
      col: 4
  values:
    - 5
  areas:
    - Column: 6
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 0
    - row: 6
      col: 1
    - row: 1
      col: 2
    - row: 5
      col: 6
  values:
    - 5
  areas:
    - Row: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 2
    - row: 0
      col: 1
    - row: 2
      col: 3
    - row: 1
      col: 8
    - row: 4
      col: 6
  values:
    - 4
  areas:
    - Row: 3
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 0
    - row: 1
      col: 8
    - row: 0
      col: 1
    - row: 4
      col: 6
    - row: 5
      col: 5
  values:
    - 4
  areas:
    - Column: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 4
    - row: 3
      col: 2
    - row: 8
      col: 0
    - row: 4
      col: 6
    - row: 7
      col: 7
  values:
    - 4
  areas:
    - Row: 6
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  grid: ~
  candidates:
    - - []
      - []
      - []
      - - 5
        - 6
        - 7
      - - 6
        - 7
        - 8
      - - 5
        - 6
        - 8
      - - 6
        - 9
      - - 6
        - 7
        - 9
      - []
    - - - 6
        - 7
        - 8
      - - 6
        - 7
        - 8
      - []
      - []
      - []
      - []
      - []
      - - 6
        - 7
      - []
    - - - 6
        - 7
        - 9
      - []
      - - 6
        - 7
        - 9
      - []
      - - 6
        - 7
      - []
      - []
      - []
      - []
    - - []
      - - 6
        - 7
        - 8
        - 9
      - []
      - - 6
        - 7
      - []
      - - 6
      - []
      - []
      - - 6
        - 7
        - 8
        - 9
    - - - 6
        - 7
        - 8
      - - 1
        - 6
        - 7
        - 8
      - - 1
        - 6
        - 7
      - - 1
        - 2
        - 5
        - 6
        - 7
      - []
      - - 2
        - 5
        - 6
        - 8
      - []
      - []
      - - 6
        - 7
    - - - 6
        - 7
        - 8
        - 9
      - []
      - []
      - - 1
        - 6
      - - 1
        - 6
        - 7
        - 8
      - []
      - []
      - - 6
        - 9
      - - 6
        - 7
        - 8
        - 9
    - - []
      - []
      - - 1
        - 6
        - 9
      - []
      - []
      - []
      - - 6
        - 9
      - []
      - - 1
        - 6
        - 9
    - - []
      - - 1
        - 6
      - []
      - - 1
        - 3
        - 6
      - []
      - []
      - []
      - []
      - - 1
        - 3
        - 6
    - - []
      - - 1
        - 6
        - 7
        - 9
      - - 1
        - 6
        - 7
        - 9
      - - 1
        - 2
        - 3
        - 6
      - - 1
        - 6
      - - 2
        - 6
      - []
      - []
      - - 1
        - 3
        - 6
        - 9
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 6
  areas: []
  affectedCells:
    - row: 3
      col: 1
    - row: 3
      col: 3
    - row: 3
      col: 8
    - row: 0
      col: 5
    - row: 4
      col: 5
    - row: 8
      col: 5
    - row: 4
      col: 3
    - row: 5
      col: 3
    - row: 5
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 7
  areas: []
  affectedCells:
    - row: 3
      col: 1
    - row: 3
      col: 8
    - row: 0
      col: 3
    - row: 4
      col: 3
    - row: 5
      col: 4
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 3
  values:
    - 1
  areas: []
  affectedCells:
    - row: 5
      col: 4
    - row: 4
      col: 3
    - row: 7
      col: 3
    - row: 8
      col: 3
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 5
  values:
    - 2
  areas: []
  affectedCells:
    - row: 8
      col: 3
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 4
  values:
    - 8
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 5
      col: 8
    - row: 0
      col: 4
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 5
  areas: []
  affectedCells:
    - row: 4
      col: 3
    - row: 0
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 5
  values:
    - 8
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 2
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 3
  values:
    - 5
  areas:
    - Row: 0
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 2
  values:
    - 1
  areas:
    - Row: 4
  affectedCells:
    - row: 6
      col: 2
    - row: 8
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 8
      col: 4
  values:
    - 1
  areas:
    - Column: 4
  affectedCells:
    - row: 8
      col: 1
    - row: 8
      col: 2
    - row: 8
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 3
      col: 8
  values:
    - 8
  areas:
    - Column: 8
  affectedCells:
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 9
  areas: []
  affectedCells:
    - row: 8
      col: 1
    - row: 5
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 6
      col: 8
  values:
    - 1
  areas:
    - Row: 6
  affectedCells:
    - row: 7
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 0
  values:
    - 9
  areas:
    - Column: 0
  affectedCells:
    - row: 2
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 7
      col: 1
  values:
    - 1
  areas:
    - Column: 1
  affectedCells:
    - row: 7
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 4
      col: 0
    - row: 5
      col: 0
  values:
    - 7
  areas:
    - Region: 3
    - Column: 0
  affectedCells:
    - row: 1
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: CommonPeerElimination
  cells:
    - row: 7
      col: 3
    - row: 8
      col: 3
  values:
    - 6
  areas:
    - Column: 3
  affectedCells:
    - row: 8
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 1
  values:
    - 7
  areas: []
  affectedCells:
    - row: 8
      col: 2
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 7
  values:
    - 7
  areas:
    - Row: 1
  affectedCells:
    - row: 0
      col: 7
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 2
  values:
    - 7
  areas:
    - Column: 2
  affectedCells:
    - row: 2
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 6
  areas: []
  affectedCells:
    - row: 0
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 4
  values:
    - 7
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: CommonPeerElimination
  cells:
    - row: 6
      col: 2
    - row: 8
      col: 2
  values:
    - 6
  areas:
    - Column: 2
  affectedCells:
    - row: 8
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 3
  values:
    - 3
  areas: []
  affectedCells:
    - row: 8
      col: 8
    - row: 7
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 3
  values:
    - 6
  areas: []
  affectedCells:
    - row: 7
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 7
      col: 8
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: CommonPeerElimination
  cells:
    - row: 5
      col: 8
    - row: 8
      col: 8
  values:
    - 9
  areas:
    - Column: 8
  affectedCells:
    - row: 6
      col: 6
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 6
  values:
    - 6
  areas: []
  affectedCells:
    - row: 6
      col: 2
    - row: 0
      col: 6
    - row: 8
      col: 8
    - row: 5
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 6
  values:
    - 9
  areas: []
  affectedCells:
    - row: 0
      col: 7
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 6
      col: 2
  values:
    - 9
  areas: []
  affectedCells:
    - row: 8
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 8
  values:
    - 9
  areas: []
  affectedCells:
    - row: 8
      col: 2
    - row: 5
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 7
  values:
    - 6
  areas: []
  affectedCells:
    - row: 5
      col: 7
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 8
  values:
    - 7
  areas: []
  affectedCells:
    - row: 5
      col: 0
    - row: 4
      col: 8
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 8
      col: 2
  values:
    - 6
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 8
  values:
    - 6
  areas: []
  affectedCells:
    - row: 4
      col: 0
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 0
  values:
    - 6
  areas: []
  affectedCells:
    - row: 1
      col: 0
    - row: 4
      col: 0
    - row: 4
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 7
  values:
    - 9
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 0
  values:
    - 8
  areas: []
  affectedCells:
    - row: 1
      col: 1
    - row: 4
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 1
  values:
    - 8
  areas: []
  affectedCells:
    - row: 4
      col: 0
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 6
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 7
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
